--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "esmbuild",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "",
   "license": "MIT",
   "author": {
     "name": "Koen Bok"
   },
   "scripts": {
-    "serve": "yarn; node esmbuild/esmbuild serve ./src 8000",
-    "build": "yarn; node esmbuild/esmbuild build ./src dist",
-    "deploy": "yarn version; git push --tags; git push",
-    "release": "yarn run build; mkdir -p release; cp -Rf dist release/$npm_package_name@$npm_package_version"
+    "serve": "yarn && node esmbuild/esmbuild serve ./src 8000",
+    "build": "yarn && node esmbuild/esmbuild build ./src dist",
+    "deploy": "yarn version && git push --tags && git push",
+    "release": "yarn run build && mkdir -p release && cp -Rf dist release/$npm_package_name@$npm_package_version"
   },
   "devDependencies": {
     "@types/react": "^17.0.14",
